# locr

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  locr-review.md
.github/workflows/: ci.yml  release.yml
crates/locr-core/: Cargo.toml  NOTICE-MODELS  build.rs
crates/locr-core/src/: lib.rs
crates/locr-core/tests/: smoke_ocr.rs
crates/locr-ffi/: Cargo.toml  README.md
crates/locr-ffi/include/: locr.h
crates/locr-ffi/src/: lib.rs
crates/locr-wasm/: Cargo.toml
crates/locr-wasm/src/: lib.rs
docs/: GLOBAL_ADOPTION.md
integrations/: README.md
integrations/google-workspace-addon/: Code.gs  README.md  appsscript.json  sidebar.html
integrations/microsoft-office-addin/: README.md  manifest.localhost.xml  manifest.xml  package.json  taskpane.html  taskpane.js
integrations/vscode-extension/: .gitignore  README.md  package.json
integrations/vscode-extension/src/: extension.ts
