[package]
name = "locr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Universal local OCR engine core"
repository.workspace = true

[dependencies]
image = "0.25"
thiserror = "1.0"
tempfile = "3.10"

[features]
default = ["tesseract-cli"]
tesseract-cli = []
