[package]
name = "locr-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stable C ABI for locr - universal local OCR. Consume from C, C++, C#, Java, Go, Swift, or anything with an FFI."
repository.workspace = true

[lib]
name = "locr"
crate-type = ["cdylib", "staticlib"]

[dependencies]
locr-core = { path = "../locr-core" }
